[gd_scene load_steps=11 format=3 uid="uid://boyv7f5mhv6a1"]

[ext_resource type="Script" uid="uid://cgwdwdy6w18qy" path="res://character_manager/characters/character_state_machine/character_state_machine.gd" id="1_51eua"]
[ext_resource type="Script" uid="uid://4nltwbbud3pt" path="res://character_manager/characters/character_state_machine/spawn_state.gd" id="2_d06h3"]
[ext_resource type="Script" uid="uid://bps5sfrl2aaib" path="res://character_manager/characters/character_state_machine/idle_state.gd" id="3_3q1g7"]
[ext_resource type="Script" uid="uid://7hwv24v0mi0s" path="res://character_manager/characters/character_state_machine/walk_state.gd" id="4_r6o2d"]
[ext_resource type="Script" uid="uid://dkhl54ygs3sgh" path="res://character_manager/characters/character_state_machine/dash_state.gd" id="5_5n3xp"]
[ext_resource type="Script" uid="uid://5w6u0yvraxlq" path="res://character_manager/characters/character_state_machine/jump_state.gd" id="6_55b45"]
[ext_resource type="Script" uid="uid://cjjakjolr0wvq" path="res://character_manager/characters/character_state_machine/fall_state.gd" id="7_o77o4"]
[ext_resource type="Script" uid="uid://dolr8qlh8hqnk" path="res://character_manager/characters/character_state_machine/climb_state.gd" id="8_iapw4"]
[ext_resource type="Script" uid="uid://cl1u7805v0bk" path="res://character_manager/characters/character_state_machine/glide_state.gd" id="9_mv3bi"]
[ext_resource type="Script" uid="uid://c3xa8o71gbfo0" path="res://character_manager/characters/character_state_machine/die_state.gd" id="10_dhalj"]

[node name="CharacterStateMachine" type="Node2D"]
script = ExtResource("1_51eua")

[node name="SpawnState" type="Node" parent="."]
script = ExtResource("2_d06h3")

[node name="IdleState" type="Node" parent="."]
script = ExtResource("3_3q1g7")

[node name="WalkState" type="Node" parent="."]
script = ExtResource("4_r6o2d")

[node name="DashState" type="Node" parent="."]
script = ExtResource("5_5n3xp")

[node name="JumpState" type="Node" parent="."]
script = ExtResource("6_55b45")

[node name="FallState" type="Node" parent="."]
script = ExtResource("7_o77o4")

[node name="ClimbState" type="Node" parent="."]
script = ExtResource("8_iapw4")

[node name="GlideState" type="Node" parent="."]
script = ExtResource("9_mv3bi")

[node name="DieState" type="Node" parent="."]
script = ExtResource("10_dhalj")
